--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 <body>
     <aside class="aside-wrap">
-        <img src="https://pps.whatsapp.net/v/t61.24694-24/399451586_1421869155417261_7122726307561319324_n.jpg?ccb=11-4&oh=01_AdTppUZjHYRBFiA6cbBvUAWL4sPsivUywDdkFle8XP8ekA&oe=65CB542F&_nc_sid=e6ed6c&_nc_cat=102">
+        <img src="https://photos.google.com/photo/AF1QipPMp9dgEwHFmHZToraHNhC_scxDkdvHslEAyz41">
         <h1 class="name">Jonathan Gomes</h1>
         <nav class="menu">
             <ul class="menu-list">
