Finalizando barra lateral

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 <body>
     <aside class="aside-wrap">
-        <img src="https://photos.google.com/photo/AF1QipPMp9dgEwHFmHZToraHNhC_scxDkdvHslEAyz41">
+        <img src="https://lh3.googleusercontent.com/pw/ABLVV861WXiK5ODCVOVysbJq-bWTtXOa_c20KidFuR8Ln2nA_kKzoLOlM2ve3NR2Kq3M83oFN0N_GbeD7gvuBxybs7q1_peBfAHzUnuV1MvD_RFMAm2HkDpS2o-gRUBlh1qU01y9vm2tRrjs_YH9ubWBMBpXPlmVE93EoRzbd_C8jdMwxkJNrKqQLMgSfYd5SLfBDSh70zuu4em_FT14DjxCKfx9qSsjc8xY5zphht_-OJCkPx2W6jAiFaVorcU-H1diqnhlhCmjYL-RzylhOpXwWGeHRIGpFy6C4pG3hcpy4UWWCQJxFs8sQUkrxUiuy1uxW0MN8-izvO5KGqBBnXzKYiHGZSe9UuFo2edLtzcbwwVWzafQlSLxBNEJMo0W2Qf6Glsrx1Dah4JlCOiYUsTfP4KRlkoztWTDm7h89a9xdPR2b4ezKCbJ9OkHli8yIweXSe7qUDf-3tIwJWlqalRZouInrr3rDksG2Tf1GWua11AhzB16o689cfVBiExUKVQAzBnTF939dE0_m9lPfcqJoG9cflgVN8O2dGhOAH8V7VQQOv8pp695Odofsu48FsFDiRoy61kPR_nsWFFIumIlFM3fLXitiEy0KoU3D45drnQX4zFcpzhTOqCfMXr5sjSJX49nZEV-1khGUPmd35yxNqTnZPVxEaAOpoNzVQp03hyzmge9MdpTaPWQQB6GRGfJKr7il9LVt9_d6puMppfFmok0mZ8ADj0mU14VY4dK9gtHNkcehhLBwJkAkM_nDUjwTGEkLH0xczbaM0RlITeY_FKAZ9EAVUnGipmqhANmPwAfq_kf2vffNySuF1Jwdwt3wpFCqu3Cj_2dy8JbDrGPX1Ze66UlWDSA1MPcge6cJjNIgrM7n7jnBPc_uCR4L6DUG6eVYG5eOMeQUYcVeq5xY_zGbRgE=w640-h640-s-no?authuser=0" class="profile-img" >
         <h1 class="name">Jonathan Gomes</h1>
         
         <nav class="menu">
