Desenvolvimento do home

--- a/index.html
+++ b/index.html
@@ -29,8 +29,19 @@
         </nav>
     </aside>
     <main>
-        <section id="home">
-            <h1>Jonathan Gomes</h1>
+        <section  id="home">
+            <h1 class="section-title">Jonathan Gomes</h1>
+            <h3>Desenvolvedor Full Satck | HTML | CSS | JAVASCRIPT</h3>
+            <address> <a class="email-link" href="mailto:tecjonathan703@hotmail.com">tecjonathan703@hotmail.com</a></address>
+            <p class="section-description"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Sed pariatur voluptas, rerum aperiam eaque ut deleniti reprehenderit! Illum, fuga similique,
+                 amet rem molestias non modi aspernatur quibusdam, dicta quidem deleniti!
+            </p>
+            <ul>
+                <li><a href="">Linkedin</a></li>
+                <li><a href="">Github</a></li>
+                <li><a href="">Instagram</a></li>
+                            </ul>
         </section>
         <section id="skills">
             <h2>Habilidades</h2>
