--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Jonathan Gomes</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     </head>
 <body>
     <aside class="aside-wrap">
@@ -14,16 +15,28 @@
         <nav class="menu">
             <ul class="menu-list">
                 <li class="menu-item">
-                    <a href="#home" class="menu-link">Início</a>
+                    <a href="#home" class="menu-link">
+                        <i class="fa-solid fa-house"></i>
+                        Início
+                    </a>
                 </li>
                 <li class="menu-item">
-                    <a href="#skills" class="menu-link">Habilidades</a>
+                    <a href="#skills" class="menu-link">
+                        <i class="fa-solid fa-screwdriver-wrench"></i>
+                        Habilidades
+                    </a>
                 </li>
                 <li class="menu-item">
-                    <a href="#experience" class="menu-link">Experiências</a>
+                    <a href="#experience" class="menu-link">
+                        <i class="fa-solid fa-briefcase"></i>
+                        Experiências
+                    </a>
                 </li>
                 <li class="menu-item">
-                    <a href="#projects" class="menu-link">Projetos</a>
+                    <a href="#projects" class="menu-link">
+                        <i class="fa-solid fa-flask"></i>
+                        Projetos
+                    </a>
                 </li>
             </ul>
         </nav>
@@ -31,16 +44,23 @@
     <main>
         <section  id="home">
             <h1 class="section-title">Jonathan Gomes</h1>
-            <h3>Desenvolvedor Full Satck | HTML | CSS | JAVASCRIPT</h3>
+            <h3>Desenvolvedor Full Satck | HTML | CSS | JS | Git | React | Node
+            </h3>
             <address> <a class="email-link" href="mailto:tecjonathan703@hotmail.com">tecjonathan703@hotmail.com</a></address>
             <p class="section-description"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                 Sed pariatur voluptas, rerum aperiam eaque ut deleniti reprehenderit! Illum, fuga similique,
                  amet rem molestias non modi aspernatur quibusdam, dicta quidem deleniti!
             </p>
             <ul class="social-links">
-                <li><a href="">Linkedin</a></li>
-                <li><a href="">Github</a></li>
-                <li><a href="">Instagram</a></li>
+                <li><a href="">
+                    <i class="fa-brands fa-linkedin"></i>
+                    </a></li>
+                <li><a href="">
+                    <i class="fa-brands fa-square-github"></i>
+                </a></li>
+                <li><a href="">
+                    <i class="fa-brands fa-square-instagram"></i>
+                </a></li>
                             </ul>
         </section>
         <section id="skills">
