--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                     <i class="fa-brands fa-linkedin"></i>
                     </a></li>
                 <li><a href="">
-                    <i class="fa-brands fa-square-github"></i>
+                    <i class="fa-brands fa-github"></i>
                 </a></li>
                 <li><a href="">
-                    <i class="fa-brands fa-square-instagram"></i>
+                    <i class="fa-brands fa-instagram"></i>
                 </a></li>
                             </ul>
         </section>
