--- a/index.html
+++ b/index.html
@@ -1,77 +1,88 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Jonathan Gomes</title>
-        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+        <link rel="stylesheet" href="style.css">
     </head>
-<body>
-    <aside class="aside-wrap">
-        <img src="	
-        https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQkcBy0bcLdlVfFASVsVhgoEqbc7bq4lGvIQg&usqp=CAU" class="profile-img" >
-            
-        <nav class="menu">
-            <ul class="menu-list">
-                <li class="menu-item">
-                    <a href="#home" class="menu-link">
-                        <i class="fa-solid fa-house"></i>
-                        Início
-                    </a>
-                </li>
-                <li class="menu-item">
-                    <a href="#skills" class="menu-link">
-                        <i class="fa-solid fa-screwdriver-wrench"></i>
-                        Habilidades
-                    </a>
-                </li>
-                <li class="menu-item">
-                    <a href="#experience" class="menu-link">
-                        <i class="fa-solid fa-briefcase"></i>
-                        Experiências
-                    </a>
-                </li>
-                <li class="menu-item">
-                    <a href="#projects" class="menu-link">
-                        <i class="fa-solid fa-flask"></i>
-                        Projetos
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </aside>
-    <main>
-        <section  id="home">
-            <h1 class="section-title">Jonathan Gomes</h1>
-            <h3>Desenvolvedor Full Satck | HTML | CSS | JS | Git | React | Node
-            </h3>
-            <address> <a class="email-link" href="mailto:tecjonathan703@hotmail.com">tecjonathan703@hotmail.com</a></address>
-            <p class="section-description"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Sed pariatur voluptas, rerum aperiam eaque ut deleniti reprehenderit! Illum, fuga similique,
-                 amet rem molestias non modi aspernatur quibusdam, dicta quidem deleniti!
-            </p>
-            <ul class="social-links">
-                <li><a href="">
-                    <i class="fa-brands fa-linkedin"></i>
-                    </a></li>
-                <li><a href="">
-                    <i class="fa-brands fa-github"></i>
-                </a></li>
-                <li><a href="">
-                    <i class="fa-brands fa-instagram"></i>
-                </a></li>
-                            </ul>
-        </section>
-        <section id="skills">
-            <h2>Habilidades</h2>
-        </section>
-        <section id="experience">
-            <h2>Experiências</h2>
-        </section>
-        <section id="projects">
-            <h2>Projetos</h2>
-        </section>
-    </main>
-</body>
+    <body>
+
+        <label for="menu-check" class="menu-label">
+            <i class="fa-solid fa-bars"></i>
+        </label>
+        <input type="checkbox" id="menu-check">
+
+        <aside class="aside-wrap">
+            <img class="profile-img" src="https://source.unsplash.com/random/200x200?profile">
+            <nav class="menu">
+                <ul class="menu-list">
+                    <li class="menu-item">
+                        <a href="#home" class="menu-link">
+                            <i class="fa-solid fa-house"></i>
+                            Inicio
+                        </a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#skills" class="menu-link">
+                            <i class="fa-solid fa-screwdriver-wrench"></i>
+                            Habilidades
+                        </a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#experience" class="menu-link">
+                            <i class="fa-solid fa-briefcase"></i>
+                            Experiências
+                        </a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#projects" class="menu-link">
+                            <i class="fa-solid fa-flask"></i>
+                            Projetos
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </aside>
+        <main>
+            <section id="home">
+                <h1 class="section-title">Jonathan Gomes</h1>
+                <h3>Desenvolvedor | PHP | JS | HTML | CSS | REACT</h3>
+                <address>
+                    <a class="email-link" href="mailto:kelvysmoura2@gmail.com">tecjonathan703@hotmail.com</a>
+                </address>
+                <p class="section-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Harum incidunt quisquam voluptatem porro consequatur, 
+                    dolores quod reprehenderit tempora exercitationem ipsa quia et, 
+                    laboriosam expedita culpa dicta dolorem illo qui repellendus!
+                </p>
+                <ul class="social-links">
+                    <li>
+                        <a href="">
+                            <i class="fa-brands fa-linkedin"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </li>
+                </ul>
+            </section>
+            <section id="skills">
+                <h2>Habilidades</h2>
+            </section>
+            <section id="experience">
+                <h2>Experiências</h2>
+            </section>
+            <section id="projects">
+                <h2>Projetos</h2>
+            </section>
+        </main>
+    </body>    
 </html>
