finalizando layout do portfólio

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <input type="checkbox" id="menu-check">
 
         <aside class="aside-wrap">
-            <img class="profile-img" src="https://source.unsplash.com/random/200x200?profile">
+            <img class="profile-img" src="https://avatars.githubusercontent.com/u/155783277?v=4">
             <nav class="menu">
                 <ul class="menu-list">
                     <li class="menu-item">
@@ -48,7 +48,7 @@
                 <h1 class="section-title">Jonathan Gomes</h1>
                 <h3>Desenvolvedor | PHP | JS | HTML | CSS | REACT</h3>
                 <address>
-                    <a class="email-link" href="mailto:kelvysmoura2@gmail.com">tecjonathan703@hotmail.com</a>
+                    <a class="email-link" href="mailto:tecjonathan703@hotmail.com">tecjonathan703@hotmail.com</a>
                 </address>
                 <p class="section-description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -58,17 +58,17 @@
                 </p>
                 <ul class="social-links">
                     <li>
-                        <a href="">
+                        <a href="https://www.linkedin.com/in/jonathan-gomes-9465b4170/">
                             <i class="fa-brands fa-linkedin"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="https://github.com/Johngfreitas">
                             <i class="fa-brands fa-github"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="https://www.instagram.com/johngfreitas/">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
                     </li>
@@ -76,12 +76,67 @@
             </section>
             <section id="skills">
                 <h2>Habilidades</h2>
+                <p class="section-description">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Aliquid deleniti itaque, optio quae veniam quas.
+                    Laborum provident delectus necessitatibus asperiores
+                    quasi aut numquam deserunt aliquam molestiae praesentium maiores,
+                    sapiente assumenda!
+                </p>
+                <h3>Tecnologias</h3>
+                <ul class="tech">
+                    <li>
+                        <i class="fa-brands fa-html5"></i>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-css3-alt"></i>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-js"></i>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-react"></i>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-node-js"></i>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-database"></i>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-git"></i>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-github"></i>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-python"></i>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-php"></i>
+                    </li>
+                </ul>
             </section>
             <section id="experience">
                 <h2>Experiências</h2>
+                <p class="section-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Magnam ab ducimus dolorum itaque molestias odio quibusdam, 
+                    molestiae quam enim consequuntur rerum ipsa voluptatem 
+                    accusantium quasi sed sint similique inventore saepe!
+                </p>
             </section>
             <section id="projects">
                 <h2>Projetos</h2>
+                <img class="portfolio" src="file:///C:/Users/Jonathan%20&%20Nath%C3%A1llia/Documents/aula-01/portf%C3%B3lio.png">
+                <br>
+                <a href="https://johngfreitas.github.io/">Github</a>
+                <h3>Portfólio</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                     Nemo debitis perferendis maiores possimus aliquam,
+                      quibusdam tenetur libero officiis tempore enim tempora
+                       fugit voluptatibus eaque quis laudantium? Placeat
+                        harum qui perferendis.</p>
             </section>
         </main>
     </body>    
